@@ -1,4 +1,6 @@
 
+150528	Transparent reverse proxy support for Linux, FreeBSD and OpenBSD.
+
 150527	Allow the client table size to be updated on the fly. Default size still 2048.
 	Allow the connection table size to be updated in the fly. Default still 500.
 	See penctl.1, options clients_max and conn_max.
